k8s/beat-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: beat-deployment
  namespace: smart-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-beat
  template:
    metadata:
      labels:
        app: celery-beat
    spec:
      containers:
        - name: celery-beat
          image: smart-task-app:latest
          imagePullPolicy: Never
          command: ["celery", "-A", "app.workers.celery_app", "beat", "--loglevel=info"]
