k8s/test-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: test-pod
  namespace: smart-task
spec:
  containers:
    - name: nginx
      image: nginx:alpine
      ports:
        - containerPort: 80
