k8s/worker-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: worker-deployment
  namespace: smart-task
spec:
  replicas: 1
  selector:
    matchLabels:
      app: celery-worker
  template:
    metadata:
      labels:
        app: celery-worker
    spec:
      containers:
        - name: celery-worker
          image: smart-task-app:latest
          imagePullPolicy: Never
          command: ["celery", "-A", "app.workers.celery_app", "worker", "--loglevel=info"]
